@@ -85,6 +85,9 @@
 	errors in some cases that prevented the document from
 	printing or displaying properly.
 
+	<LI>Eliminated a common cause of "table too wide"
+	formatting errors,
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.23</H2>
